# authsignal-python

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  readme.md  requirements.txt  setup.py
.github/: release-drafter-config.yml
.github/workflows/: publish-to-pypi.yml  release-package.yml
authsignal/: __init__.py  client.py  client_tests.py  webhook.py  webhook_tests.py
