[tool.poetry]
name = "authsignal"
version = "0.1.0"
description = "Authsignal Python SDK for Passwordless Step Up Authentication"
authors = ["justinsoong <justinsoong@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
